# src/shared/infra/http/routes/attendant.routers.ts
@@ -1,3 +1,4 @@
+import { AuthenticateAttendantController } from "@modules/attendant/useCases/authenticateAttendant/AuthenticateAttendantController";
 import { CreateAttendantController } from "@modules/attendant/useCases/createAttendant/CreateAttendantController";
 import { Router } from "express";
 import { ensureAttendantAdmin } from "../middlewares/ensureAttendantAdmin";
@@ -6,6 +7,7 @@ import { ensureAuthenticatedAttendant } from "../middlewares/ensureAuthenticated
 const attendantsRouters = Router();
 
 const createAttendantController = new CreateAttendantController();
+const authenticateAttendantController = new AuthenticateAttendantController();
 
 attendantsRouters.post(
   "/",
@@ -13,5 +15,7 @@ attendantsRouters.post(
   ensureAttendantAdmin,
   createAttendantController.handle
 );
+
+attendantsRouters.post("/sessions", authenticateAttendantController.handle);
 
 export { attendantsRouters };
